# simple_rag

./: README.md  pyproject.toml  rag_example.py  scratch.ipynb
